--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "serve": "json-server --watch data/data.json --routes data/routes.json --port 3001",
     "serve:dev": "npm-run-all --parallel serve dev",
-    "collect:coverage": "nyc report --reporter=html --report-dir=coverage --temp-dir=coverage"
+    "collect:coverage": "nyc report --reporter=html --report-dir=coverage --temp-dir=coverage",
+    "test:ci": "node scripts/run-tests-ci.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
@@ -52,6 +53,7 @@
     "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^17.1.0",
+    "puppeteer": "^24.29.1",
     "twd-js": "^0.8.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
