--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest",
     "preview": "vite preview",
     "serve": "json-server --watch data/data.json --routes data/routes.json --port 3001",
-    "serve:dev": "npm-run-all --parallel serve dev"
+    "serve:dev": "npm-run-all --parallel serve dev",
+    "test:ci": "node scripts/run-tests-ci.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
@@ -51,6 +52,7 @@
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
+    "puppeteer": "^24.29.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
