--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           CI: true
 
       - name: Run Puppeteer tests (test:ci)
-        run: npm run test:ci
+        run: npx twd-cli run
         env:
           CI: true
       
