--- a/package.json
+++ b/package.json
@@ -5,17 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:ci": "CI=true VITE_COVERAGE=true vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "test": "vitest",
     "preview": "vite preview",
     "serve": "json-server --watch data/data.json --routes data/routes.json --port 3001",
-    "serve:dev": "npm-run-all --parallel serve dev",
-    "test:ci": "node scripts/run-tests-ci.js",
-    "collect:coverage:html": "npx nyc report --reporter=html --report-dir=coverage",
-    "collect:coverage:lcov": "npx nyc report --reporter=lcov --report-dir=coverage",
-    "collect:coverage:text": "npx nyc report --reporter=text --report-dir=coverage"
+    "serve:dev": "npm-run-all --parallel serve dev"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
