--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5",
-    "twd-js": "^1.4.3",
+    "twd-js": "^1.5.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -58,6 +58,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^17.1.0",
     "puppeteer": "^24.29.1",
+    "twd-relay": "^0.1.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
