--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "globals": "^17.1.0",
     "jsdom": "^27.4.0",
     "npm-run-all": "^4.1.5",
+    "twd-js": "^1.5.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
