--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI - twd tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, init-tutorial ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, init-tutorial ]
 
 jobs:
   test:
