--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      
+      - name: Install mock service worker
+        run: npx twd-js init public --save
 
       - name: Start Vite dev server
         run: |
