--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Start Vite dev server
         run: |
-          nohup npm run dev > vite.log 2>&1 &
+          nohup npm run dev:ci > vite.log 2>&1 &
           npx wait-on http://localhost:5173
 
       - name: Cache Puppeteer browsers
@@ -44,3 +44,7 @@ jobs:
 
       - name: Run TWD tests
         run: npx twd-cli run
+
+      - name: Display coverage
+        run: |
+          npm run collect:coverage:text
