--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:ci": "CI=true vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "test": "vitest",
     "preview": "vite preview",
     "serve": "json-server --watch data/data.json --routes data/routes.json --port 3001",
-    "serve:dev": "npm-run-all --parallel serve dev"
+    "serve:dev": "npm-run-all --parallel serve dev",
+    "collect:coverage:html": "npx nyc report --reporter=html --report-dir=coverage",
+    "collect:coverage:lcov": "npx nyc report --reporter=lcov --report-dir=coverage",
+    "collect:coverage:text": "npx nyc report --reporter=text --report-dir=coverage"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
@@ -45,10 +49,12 @@
     "globals": "^17.1.0",
     "jsdom": "^27.4.0",
     "npm-run-all": "^4.1.5",
+    "nyc": "^17.1.0",
     "twd-js": "^1.5.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
+    "vite-plugin-istanbul": "^7.2.1",
     "vitest": "^4.0.18"
   }
 }
